# tpmp-gr9b-lab4-elite-barbarians

./: CMakeLists.txt  README.md  makefile  perfume.sql
.github/workflows/: ci.yml
src/: main.cpp  sql.h  trading.db
tests/: test_main.cpp
